# Sectra_programming_assignment_Jesper_Westell

./: ISE  README.md
src/: CMakeLists.txt  main.cpp  type.h
src/Image_classes/: bmp.cpp  bmp.h  image.cpp  image.h  jp2.cpp  jp2.h  jpg.cpp  jpg.h  pyramid_image.cpp  pyramid_image.h
